--- a/package.json
+++ b/package.json
@@ -1,24 +1,25 @@
 {
-  "name": "nodejs",
+  "name": "bookstore",
   "version": "1.0.0",
-  "description": "",
-  "main": "index.js",
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1"
+    "start": "node dist/server.js",
+    "dev": "ts-node-dev src/server.ts",
+    "test": "jest"
   },
-  "keywords": [],
-  "author": "",
-  "license": "ISC",
   "dependencies": {
-    "@types/node": "^18.0.6",
-    "dotenv": "^16.4.5",
-    "express": "^4.21.1",
-    "jsonwebtoken": "^9.0.2",
-    "pg": "^8.13.1"
+    "dotenv": "^10.0.0",
+    "express": "^4.17.1",
+    "pg": "^8.6.0"
   },
   "devDependencies": {
-    "@types/express": "^5.0.0",
-    "@types/jsonwebtoken": "^9.0.7",
-    "supertest": "^7.0.0"
+    "@types/express": "^4.17.12",
+    "@types/jest": "^27.0.2",
+    "@types/pg": "^8.11.10",
+    "jest": "^27.2.5",
+    "supertest": "^6.1.6",
+    "ts-jest": "^27.0.5",
+    "ts-node-dev": "^1.1.8",
+    "ts-node": "^10.9.2",
+    "typescript": "^4.5.2"
   }
 }
